[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/boss/character_0021.png" type="Texture" id=1]
[ext_resource path="res://assets/boss/character_0022.png" type="Texture" id=3]
[ext_resource path="res://scenes/Boss.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 9.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 96.0052

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 11 )

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Visuals"]
frames = SubResource( 1 )
animation = "run"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
collision_layer = 65536
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
